# zbp

./: .gitignore  CMakeLists.txt  README.md  configure_debug.sh  configure_release.sh  main.cpp
poli_dynamic/: CMakeLists.txt
poli_dynamic/include/zbp/poli_dynamic/: Addition.hpp  Hashing.hpp
poli_dynamic/include/zbp/poli_dynamic/ifc/: IOperation.hpp
poli_dynamic/src/: Addition.cpp  Hashing.cpp
poli_static/: CMakeLists.txt
poli_static/include/zbp/poli_static/: Addition.hpp  Hashing.hpp
poli_static/include/zbp/poli_static/ifc/: IOperation.hpp
poli_static/src/: Addition.cpp  Hashing.cpp
runner/include/runner/: TestsRunner.hpp
runner/include/runner/config/: Config.hpp
runner/src/: TestsRunner.cpp
